[package]
name = "clauhist"
version = "1.0.1"
edition = "2021"
description = "Browse your Claude Code history and resume sessions with ease"
license = "MIT"
repository = "https://github.com/lef237/clauhist"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4", features = ["derive"] }
libc = "0.2"
